--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
 	"name": "decodeapp",
 	"description": "decode App",
-	"repository": "https://github.com/username/reponame.git",
+	"repository": "https://github.com/clydeinwebdev/decodeapp-herokurecipe.git",
 	"image": "heroku/nodejs"
 }
